refactor: modernize use cases with toList() and typed domain exceptions