@@ -1,14 +1,12 @@
 package com.veterinaria.consentidos.features.person.application.usecase;
 
 import com.veterinaria.consentidos.features.person.application.dto.PersonDto;
-import com.veterinaria.consentidos.features.person.domain.entity.Person;
+import com.veterinaria.consentidos.features.person.domain.exception.PersonNotFoundException;
 import com.veterinaria.consentidos.features.person.domain.repository.PersonRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Use case for retrieving person information.
@@ -29,22 +27,13 @@ public class GetPersonUseCase {
      * Retrieves a person by their ID.
      *
      * @param id the person's ID
-     * @return PersonDto if found, null otherwise
+     * @return PersonDto if found
+     * @throws PersonNotFoundException if the person does not exist
      */
     public PersonDto getById(Long id) {
-        Optional<Person> person = personRepository.findById(id);
-        return person.map(PersonDto::fromEntity).orElse(null);
-    }
-
-    /**
-     * Retrieves a person by their document number.
-     *
-     * @param document the person's document number
-     * @return PersonDto if found, null otherwise
-     */
-    public PersonDto getByDocument(String document) {
-        Optional<Person> person = personRepository.findByDocument(document);
-        return person.map(PersonDto::fromEntity).orElse(null);
+        return personRepository.findById(id)
+                .map(PersonDto::fromEntity)
+                .orElseThrow(() -> new PersonNotFoundException(id));
     }
 
     /**
@@ -56,7 +45,7 @@ public class GetPersonUseCase {
         return personRepository.findAll()
                 .stream()
                 .map(PersonDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -69,7 +58,7 @@ public class GetPersonUseCase {
         return personRepository.findByCity(city)
                 .stream()
                 .map(PersonDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -82,25 +71,6 @@ public class GetPersonUseCase {
         return personRepository.findByDocumentType(documentType)
                 .stream()
                 .map(PersonDto::fromEntity)
-                .collect(Collectors.toList());
-    }
-
-    /**
-     * Checks if a person exists with the given document number.
-     *
-     * @param document the document number to check
-     * @return true if a person exists with this document, false otherwise
-     */
-    public boolean existsByDocument(String document) {
-        return personRepository.existsByDocument(document);
-    }
-
-    /**
-     * Gets the total count of persons in the system.
-     *
-     * @return the total number of persons
-     */
-    public long getTotalCount() {
-        return personRepository.count();
+                .toList();
     }
 }
